# go/model_vein_set.go
@@ -9,6 +9,9 @@
 
 package openapi
 
+
+
+
 type VeinSet struct {
 
 	// The component ID of the desired information
@@ -17,8 +20,8 @@ type VeinSet struct {
 	// The component name of the desired information
 	ComponentName string `json:"componentName,omitempty"`
 
-	// However we want to handle the setter field
-	MiscFieldForInfo string `json:"MiscFieldForInfo,omitempty"`
+	// newValue to set to component
+	NewValue string `json:"newValue,omitempty"`
 }
 
 // AssertVeinSetRequired checks if the required fields are not zero-ed
@@ -26,14 +29,7 @@ func AssertVeinSetRequired(obj VeinSet) error {
 	return nil
 }
 
-// AssertRecurseVeinSetRequired recursively checks if required fields are not zero-ed in a nested slice.
-// Accepts only nested slice of VeinSet (e.g. [][]VeinSet), otherwise ErrTypeAssertionError is thrown.
-func AssertRecurseVeinSetRequired(objSlice interface{}) error {
-	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
-		aVeinSet, ok := obj.(VeinSet)
-		if !ok {
-			return ErrTypeAssertionError
-		}
-		return AssertVeinSetRequired(aVeinSet)
-	})
+// AssertVeinSetConstraints checks if the values respects the defined constraints
+func AssertVeinSetConstraints(obj VeinSet) error {
+	return nil
 }
